# ChangeLog for games-emulation/mupen64plus-ui-console
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/mupen64plus-ui-console/ChangeLog,v 1.3 2013/12/19 16:55:06 mgorny Exp $

  19 Dec 2013; Michał Górny <mgorny@gentoo.org>
  mupen64plus-ui-console-2.0.ebuild:
  Update SRC_URI following the upstream move to github.

  16 Dec 2013; Michał Górny <mgorny@gentoo.org>
  mupen64plus-ui-console-2.0.ebuild:
  Remove implicit CPU flags from the Makefiles. Support epatch_user.

*mupen64plus-ui-console-2.0 (15 Dec 2013)

  15 Dec 2013; Michał Górny <mgorny@gentoo.org> +metadata.xml,
  +mupen64plus-ui-console-2.0.ebuild:
  Introduce the console UI for mupen64plus-2.0.